<?xml version="1.0" encoding="utf-8"?>
<resources>

   
    <drawable name="clr_normal">#ff6501</drawable>
    <drawable name="clr_pressed">#a44100</drawable>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="app_name">SQLite_GamesPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="reg">注册</string>
    <string name="add">添加</string>
    <string name="update">修改</string>
    <string name="delete">删除</string>
    <string name="number">序号:</string>
    <string name="player">玩家:</string>
    <string name="score">分数:</string>
    <string name="level">关卡:</string>
    <string name="tishi">提示:您可以修改玩家,分数和关卡,序号不能修改,修改完成后单击保存按钮即可，否则单击取消按钮返回列表界面</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="inputplayerscore">请输入玩家分数</string>
    <string name="inputplayerlevel">请输入玩家关卡数</string>
    <string name="inputplayername">请输入玩家名称</string>

</resources>
