<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/l1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/number" />
    <TextView
        android:id="@+id/id"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:padding="5dp"
        />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignLeft="@+id/l1"
        android:layout_below="@+id/l1"
        android:id="@+id/l2">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/player" />
    <EditText
        android:id="@+id/et_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputplayername"
        android:padding="5dp" />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignLeft="@+id/l3"
        android:layout_below="@+id/l3"
        android:id="@+id/l4">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/level" />
    <EditText
        android:id="@+id/et_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputplayerlevel"
        android:inputType="number"
        android:padding="5dp" 
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l2"
        android:layout_below="@+id/l2"
        android:orientation="horizontal" >

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/score" />

        <EditText
        android:id="@+id/et_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/inputplayerscore"
        android:padding="5dp"
         />
    </LinearLayout>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearlayout"
        android:textColor="@android:color/darker_gray"
        android:text="@string/tishi"
        android:layout_marginBottom="50dp"/>
    <LinearLayout 
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <Button 
            style="?android:attr/buttonBarButtonStyle"           
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/cancel"/>
        <Button 
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/save"/>
    </LinearLayout>

</RelativeLayout>
